--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       font-size: 16px;
     }
     select { background: white; color: #0d47a1; }
-    #solatResult, #cuacaBox {
+    #solatResult, #cuacaResult {
       margin: 15px auto;
       background: rgba(255,255,255,0.1);
       border-radius: 12px;
@@ -49,36 +49,57 @@
       position: fixed; inset: 0;
       background: rgba(0,0,0,0.7);
       display: flex; align-items: center; justify-content: center;
-      visibility: hidden; opacity: 0;
-      transition: 0.3s; z-index: 1000;
+      visibility: hidden; opacity: 0; transition: 0.3s;
+      z-index: 1000;
     }
     .modal.show { visibility: visible; opacity: 1; }
     .modal-content {
       background: white; color: #0d47a1;
       border-radius: 15px; padding: 20px;
-      width: 90%; max-width: 420px;
-      text-align: left; box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      width: 90%; max-width: 420px; text-align: left;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
     .close { float: right; font-weight: bold; cursor: pointer; color: #1976d2; }
     .close:hover { color: red; }
     #quoteForm { margin-top: 15px; display: flex; flex-direction: column; }
     #quoteForm input, #quoteForm textarea {
       margin: 6px 0; border: 1px solid #ccc;
-      border-radius: 6px; padding: 8px;
-      font-size: 15px; width: 100%;
+      border-radius: 6px; padding: 8px; font-size: 15px; width: 100%;
     }
     #quoteForm button {
       background: #1976d2; color: white; font-weight: bold;
     }
     #quoteForm button:hover { background: #0d47a1; }
     footer { margin-top: 30px; font-size: 14px; opacity: 0.7; }
+
+    /* Kuiz */
+    #quizSection { margin: 30px auto; background: rgba(255,255,255,0.15);
+      border-radius: 12px; width: 90%; padding: 15px; }
+    .btn { background: white; color: #0d47a1; padding: 10px 20px;
+      border-radius: 8px; border: none; margin-top: 10px; font-weight: bold; }
+    .btn:hover { background: #bbdefb; }
   </style>
 </head>
 <body>
   <h1>🕌 Waktu Solat & Cuaca</h1>
-  <select id="negeriSelect"><option value="">-- Pilih Negeri --</option></select>
+  <select id="negeriSelect">
+    <option value="">-- Pilih Negeri --</option>
+    <option value="WLY01">Kuala Lumpur</option>
+    <option value="SGR01">Selangor</option>
+    <option value="PNG01">Pulau Pinang</option>
+    <option value="PRK01">Perak</option>
+    <option value="JHR01">Johor</option>
+    <option value="KTN01">Kelantan</option>
+    <option value="NSN01">Negeri Sembilan</option>
+    <option value="PHG01">Pahang</option>
+    <option value="KDH01">Kedah</option>
+    <option value="PLS01">Perlis</option>
+    <option value="TRG01">Terengganu</option>
+    <option value="SBH01">Sabah</option>
+    <option value="SWK01">Sarawak</option>
+  </select>
   <div id="solatResult">Sila pilih negeri untuk lihat waktu solat.</div>
-  <div id="cuacaBox">Memuatkan cuaca...</div>
+  <div id="cuacaResult">Memuatkan cuaca...</div>
 
   <div class="produk-section">
     <h2>💼 Produk Zurich Takaful</h2>
@@ -88,13 +109,14 @@
     <button class="produk-btn" data-produk="zpa">Personal Accident</button>
     <button class="produk-btn" data-produk="ztravel">Z-Travel</button>
     <button class="produk-btn" data-produk="zfirebiz">Fire Takaful (Business)</button>
-  </div> 
+  </div>
 
-  <section id="quizSection" class="card">
-    <div class="card-header"><h2>🎯 Kuiz Zurich Takaful</h2></div>
-    <div id="quizBox" class="quiz-box">
-      <p id="quizQuestion" class="quiz-question">Uji pengetahuan anda tentang takaful!</p>
-      <div id="quizOptions" class="quiz-options"></div>
+  <!-- Kuiz -->
+  <section id="quizSection">
+    <h2>🎯 Kuiz Zurich Takaful</h2>
+    <div id="quizBox">
+      <p id="quizQuestion">Uji pengetahuan anda tentang takaful!</p>
+      <div id="quizOptions"></div>
       <button id="startQuiz" class="btn">Mula Kuiz</button>
     </div>
   </section>
@@ -103,7 +125,6 @@
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
       <div id="produkInfo"></div>
-
       <form id="quoteForm">
         <h4>📄 Request Quotation</h4>
         <input type="text" id="nama" placeholder="Nama penuh" required />
@@ -119,51 +140,20 @@
 
 <script>
 // ======================
-// 📅 SENARAI NEGERI
+// 🕌 WAKTU SOLAT (API eSolat JAKIM)
 // ======================
-const negeriList = {
-  "WLY01": { name: "Kuala Lumpur", lat: 3.139, lon: 101.6869 },
-  "SGR01": { name: "Selangor", lat: 3.0738, lon: 101.5183 },
-  "JHR01": { name: "Johor", lat: 1.4927, lon: 103.7414 },
-  "KDH01": { name: "Kedah", lat: 6.1184, lon: 100.3685 },
-  "KTN01": { name: "Kelantan", lat: 6.1254, lon: 102.2381 },
-  "MLK01": { name: "Melaka", lat: 2.1896, lon: 102.2501 },
-  "NSN01": { name: "Negeri Sembilan", lat: 2.7258, lon: 101.9424 },
-  "PHG01": { name: "Pahang", lat: 3.8126, lon: 103.3256 },
-  "PRK01": { name: "Perak", lat: 4.5921, lon: 101.0901 },
-  "PLS01": { name: "Perlis", lat: 6.4433, lon: 100.2048 },
-  "PNG01": { name: "Pulau Pinang", lat: 5.4164, lon: 100.3327 },
-  "SBH01": { name: "Sabah", lat: 5.9788, lon: 116.0753 },
-  "SWK01": { name: "Sarawak", lat: 1.5533, lon: 110.3592 },
-  "TRG01": { name: "Terengganu", lat: 5.3292, lon: 103.137 },
-  "LBN01": { name: "Labuan", lat: 5.2831, lon: 115.2308 }
-};
-
-const negeriSelect = document.getElementById("negeriSelect");
-Object.entries(negeriList).forEach(([code, info])=>{
-  const opt = document.createElement("option");
-  opt.value = code; opt.textContent = info.name;
-  negeriSelect.appendChild(opt);
-});
-
-// ======================
-// 🕌 WAKTU SOLAT + ☁️ CUACA
-// ======================
-negeriSelect.addEventListener("change", async ()=>{
-  const zone = negeriSelect.value;
-  const result = document.getElementById("solatResult");
-  const cuacaBox = document.getElementById("cuacaBox");
+document.getElementById("negeriSelect").addEventListener("change", async ()=>{
+  const zone = document.getElementById("negeriSelect").value;
+  const solatDiv = document.getElementById("solatResult");
+  const cuacaDiv = document.getElementById("cuacaResult");
   if(!zone) return;
-  const { lat, lon, name } = negeriList[zone];
-  result.textContent = "⏳ Memuatkan waktu solat...";
-  cuacaBox.textContent = "⏳ Memuatkan cuaca semasa...";
 
+  solatDiv.textContent = "⏳ Memuatkan waktu solat...";
   try {
     const res = await fetch(`https://www.e-solat.gov.my/index.php?r=esolatApi/takwimsolat&period=today&zone=${zone}`);
     const data = await res.json();
     const d = data.prayerTime[0];
-    result.innerHTML = `
-      <b>📍 ${name}</b><br>
+    solatDiv.innerHTML = `
       🌅 Subuh: <b>${d.fajr}</b><br>
       ☀️ Zohor: <b>${d.dhuhr}</b><br>
       🌇 Asar: <b>${d.asr}</b><br>
@@ -172,55 +162,116 @@ negeriSelect.addEventListener("change", async ()=>{
       📅 ${d.date}
     `;
   } catch {
-    result.textContent = "❌ Gagal memuatkan waktu solat.";
+    solatDiv.textContent = "❌ Gagal memuatkan waktu solat.";
+  }
+
+  // ======================
+  // 🌤️ CUACA (Open-Meteo)
+  // ======================
+  const coords = {
+    "WLY01": [3.139,101.6869],
+    "SGR01": [3.0738,101.5183],
+    "PNG01": [5.4164,100.3327],
+    "PRK01": [4.5975,101.0901],
+    "JHR01": [1.4927,103.7414],
+    "KTN01": [6.1254,102.2381],
+    "NSN01": [2.7258,101.9424],
+    "PHG01": [3.8126,103.3256],
+    "KDH01": [6.1184,100.3685],
+    "PLS01": [6.4447,100.2046],
+    "TRG01": [5.3302,103.1408],
+    "SBH01": [5.978,116.0753],
+    "SWK01": [1.5533,110.3592]
+  };
+  const [lat, lon] = coords[zone];
+  cuacaDiv.textContent = "⛅ Memuatkan cuaca...";
+  try {
+    const cuacaRes = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,weathercode&timezone=auto`);
+    const data = await cuacaRes.json();
+    const t = data.current.temperature_2m;
+    cuacaDiv.innerHTML = `🌡️ Suhu sekarang: <b>${t}°C</b>`;
+  } catch {
+    cuacaDiv.textContent = "❌ Gagal memuatkan cuaca.";
   }
 });
 
 // ======================
-// 💼 PRODUK INFO POPUP
+// 🎯 KUIZ ZURICH TAKAFUL
 // ======================
-const produkInfoData = {
-  zdrive: "🚗 <b>Z-Drive Assist</b><br>Bantuan tepi jalan 24 jam, towing, dan sokongan kecemasan untuk pemandu.",
-  zmotor: "🏍️ <b>Z-Motor</b><br>Perlindungan menyeluruh untuk kenderaan bermotor terhadap kemalangan, kecurian dan kebakaran.",
-  zrider: "🛵 <b>Z-Rider</b><br>Perlindungan khas untuk penunggang motosikal dan skuter.",
-  zpa: "💼 <b>Personal Accident</b><br>Perlindungan kemalangan diri untuk individu dan keluarga.",
-  ztravel: "✈️ <b>Z-Travel</b><br>Perlindungan perjalanan domestik dan antarabangsa.",
-  zfirebiz: "🏢 <b>Fire Takaful (Business)</b><br>Perlindungan aset perniagaan daripada kebakaran dan risiko lain."
+const quizData = [
+  {question:"Apakah perlindungan utama Z-Motor?", options:["Kemalangan, kebakaran & kecurian","Hanya kemalangan kecil","Cermin depan sahaja","Servis tahunan percuma"], answer:0},
+  {question:"Z-Rider sesuai untuk siapa?", options:["Penunggang motosikal","Pemilik lori","Pemilik rumah","Peniaga restoran"], answer:0},
+  {question:"Z-Drive Assist menawarkan bantuan apa?", options:["Bantuan tepi jalan & towing","Takaful nyawa","Diskaun servis tayar","Insurans rumah"], answer:0},
+  {question:"Skuter boleh dilindungi di bawah produk mana?", options:["Z-Rider","Z-Drive Assist","Z-Travel","Z-FireBiz"], answer:0}
+];
+let currentQuiz=0,score=0;
+const quizBox=document.getElementById("quizBox");
+const quizQuestion=document.getElementById("quizQuestion");
+const quizOptions=document.getElementById("quizOptions");
+const startBtn=document.getElementById("startQuiz");
+function loadQuiz(){
+  const q=quizData[currentQuiz];
+  quizQuestion.textContent=q.question;
+  quizOptions.innerHTML="";
+  q.options.forEach((opt,i)=>{
+    const btn=document.createElement("button");
+    btn.textContent=opt;
+    btn.className="produk-btn";
+    btn.onclick=()=>checkAnswer(i);
+    quizOptions.appendChild(btn);
+  });
+}
+function checkAnswer(selected){
+  if(selected===quizData[currentQuiz].answer)score++;
+  currentQuiz++;
+  if(currentQuiz<quizData.length){loadQuiz();}
+  else{
+    quizBox.innerHTML=`<h3>🎉 Kuiz Tamat!</h3><p>Skor anda: <b>${score}/${quizData.length}</b></p><button class='produk-btn' onclick='restartQuiz()'>Main Semula</button>`;
+  }
+}
+function restartQuiz(){
+  currentQuiz=0;score=0;
+  quizBox.innerHTML=`<p id="quizQuestion">Uji pengetahuan anda tentang takaful!</p><div id="quizOptions"></div><button id="startQuiz" class="btn">Mula Kuiz</button>`;
+  document.getElementById("startQuiz").addEventListener("click",startQuiz);
+}
+function startQuiz(){startBtn.style.display="none";loadQuiz();}
+startBtn.addEventListener("click",startQuiz);
+
+// ======================
+// 🧾 PRODUK POPUP + WHATSAPP
+// ======================
+const produkInfo={
+  zdrive:"🚗 <b>Z-Drive Assist</b> menyediakan bantuan tepi jalan, tunda kenderaan & khidmat kecemasan 24 jam.",
+  zmotor:"🏍️ <b>Z-Motor</b> melindungi kereta anda daripada kemalangan, kebakaran & kecurian.",
+  zrider:"🛵 <b>Z-Rider</b> khas untuk penunggang motosikal & skuter — perlindungan menyeluruh di jalan raya.",
+  zpa:"💼 <b>Personal Accident</b> memberi pampasan jika berlaku kemalangan, hilang upaya atau kematian.",
+  ztravel:"✈️ <b>Z-Travel</b> melindungi anda sepanjang perjalanan tempatan & antarabangsa.",
+  zfirebiz:"🔥 <b>Fire Takaful (Business)</b> melindungi premis perniagaan daripada risiko kebakaran & bencana."
 };
-
-const modal = document.getElementById("modal");
-const closeModal = document.getElementById("closeModal");
-const produkInfo = document.getElementById("produkInfo");
-
+const modal=document.getElementById("modal");
+const closeModal=document.getElementById("closeModal");
 document.querySelectorAll(".produk-btn").forEach(btn=>{
-  btn.addEventListener("click", ()=>{
-    const key = btn.dataset.produk;
-    produkInfo.innerHTML = produkInfoData[key] || "Maklumat tidak dijumpai.";
-    modal.classList.add("show");
+  btn.addEventListener("click",()=>{
+    const key=btn.dataset.produk;
+    if(produkInfo[key]){
+      document.getElementById("produkInfo").innerHTML=produkInfo[key];
+      modal.classList.add("show");
+    }
   });
 });
-closeModal.onclick = ()=> modal.classList.remove("show");
-window.onclick = e=>{ if(e.target===modal) modal.classList.remove("show"); };
+closeModal.addEventListener("click",()=>modal.classList.remove("show"));
+window.addEventListener("click",e=>{if(e.target===modal)modal.classList.remove("show");});
 
-// ======================
-// 📱 AUTO WHATSAPP FORM
-// ======================
-document.getElementById("quoteForm").addEventListener("submit", (e)=>{
+document.getElementById("quoteForm").addEventListener("submit",e=>{
   e.preventDefault();
-  const nama = document.getElementById("nama").value.trim();
-  const telefon = document.getElementById("telefon").value.trim();
-  const email = document.getElementById("email").value.trim();
-  const mesej = document.getElementById("mesej").value.trim();
-  const produk = produkInfo.textContent.match(/Z-[A-Za-z]+/)?.[0] || "Zurich Takaful";
-  
-  const text = `Assalamualaikum, saya nak minta quotation produk ${produk}.%0A`+
-               `Nama: ${nama}%0A`+
-               `Telefon: ${telefon}%0A`+
-               `Email: ${email}%0A`+
-               `Mesej: ${mesej}`;
-  
-  window.open(`https://wa.me/60192506999?text=${text}`, "_blank");
+  const nama=document.getElementById("nama").value;
+  const tel=document.getElementById("telefon").value;
+  const email=document.getElementById("email").value;
+  const msg=document.getElementById("mesej").value;
+  const whatsapp=`https://wa.me/60192506999?text=📄 Permohonan Quotation Zurich Takaful:%0A%0A👤 Nama: ${nama}%0A📞 Telefon: ${tel}%0A📧 Email: ${email}%0A💬 Mesej: ${msg}`;
+  window.open(whatsapp,"_blank");
 });
+document.getElementById("year").textContent=new Date().getFullYear();
 </script>
 </body>
 </html>
